--- a/SwatchesReader/SwatchesReaderQuickLook/Base.lproj/MainInterface.storyboard
+++ b/SwatchesReader/SwatchesReaderQuickLook/Base.lproj/MainInterface.storyboard
@@ -12,7 +12,7 @@
         <!--Preview View Controller-->
         <scene sceneID="cwh-vc-ff4">
             <objects>
-                <viewController id="M4Y-Lb-cyx" customClass="PreviewViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="M4Y-Lb-cyx" customClass="PreviewViewController" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" simulatedAppContext="notificationCenter" id="S3S-Oj-5AN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
